made minor CSS refinements

--- a/src/Mzayad.Web/404.html
+++ b/src/Mzayad.Web/404.html
@@ -5,7 +5,7 @@
     <link href="/content/site-error.min.css" rel="stylesheet" />
 </head>
 <body>
-    <h1><i class="fa fa-frown-o"></i> 404 Page Not Found</h1>
+    <h1><i class="fa fa-frown-o"></i> Page Not Found</h1>
     <h2>We're sorry but we can't seem to find the page you are looking for.</h2>
     <p><a href="javascript:history.back();return false;"><i class="fa fa-chevron-left"></i> Go Back</a></p>
 </body>
