MZ-76 added subscription duration; designing buy page

--- a/src/Mzayad.Web/404.html
+++ b/src/Mzayad.Web/404.html
@@ -86,7 +86,7 @@
             <strong>404 Page Not Found</strong>
         </h1>
         <p>We're sorry, but we can't seem to find the page you are looking for.</p>
-        <p><a href="javascript:history.back();return false;"><strong>&lsaquo;</strong> Go Back</a></p>
+        <p><a href="javascript:history.back();"><strong>&lsaquo;</strong> Go Back</a></p>
     </section>
 </body>
 </html>
