--- a/src/Mzayad.Web/500.html
+++ b/src/Mzayad.Web/500.html
@@ -86,7 +86,7 @@
             <strong>500 Page Error</strong>
         </h1>
         <p>We're sorry, but there seems to be a problem with the page you are trying to view.</p>
-        <p><a href="javascript:history.back();return false;"><strong>&lsaquo;</strong> Go Back</a></p>
+        <p><a href="javascript:history.back();"><strong>&lsaquo;</strong> Go Back</a></p>
     </section>
 </body>
 </html>
